# throttlecrab

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_STRATEGIES.md  Cargo.docker.toml  Cargo.toml  DOCKER_HUB_SETUP.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  LICENSE-APACHE  README.md  RELEASING.md  TESTING.md  build.rs  claude-output.json.local  clippy.toml  deny.toml  docker-compose.yml  run_benchmarks.sh  rustfmt.toml
.github/: RELEASE_CHECKLIST.md  dependabot.yml
.github/scripts/: generate-simple-changelog.sh
.github/workflows/: benchmark.yml  ci.yml  claude-code-review.yml  claude.yml  coverage.yml  docker.yml  msrv.yml  release.yml  security.yml  test.yml
benches/: README.md  ahash_store.rs  cleanup_strategies.rs  connection_pool.rs  core_performance.rs  grpc_throughput.rs  msgpack_comparison.rs  protocol_comparison.rs  store_shootout.rs  tcp_throughput.rs
docker/: Dockerfile
docs/: benchmark-results.md  capacity-behavior.md  data-structure-optimizations.md
examples/: access_patterns.rs  access_patterns_simple.rs  basic.rs  benchmark_demo.rs  capacity_test.rs  grpc_client.rs  performance_demo.rs  protocol_demo.rs  store_comparison.rs  test_optimized.rs
hooks/: build
integration-tests/: Cargo.toml  README.md  compare-native.sh  run-client-perf-test.sh  run-client-test.sh  run-custom-test.sh  run-heavy-test.sh  run-perf-test.sh  run-transport-test.sh  test-native-debug.sh  test-native-simple.sh
integration-tests/src/: client_perf_test.rs  client_perf_test_v2.rs  client_v2_perf_test.rs  direct_native_test.rs  main.rs  native_test_simple.rs  perf_test.rs  perf_test_multi_transport.rs
integration-tests/tests/: redis_integration_test.rs
scripts/: README.md  docker-build-push.sh  docker-build.sh  docker-push.sh  docker-quick-push.sh
src/: actor.rs  actor_tests.rs  lib.rs  main.rs  types.rs
src/core/: actor.rs  mod.rs  rate.rs  rate_limiter.rs  store.rs  store_tests.rs  tests.rs
src/core/rate/: mod.rs  tests.rs
src/core/store/: adaptive_cleanup.rs  amortized.rs  arena.rs  bloom_filter.rs  btree_store.rs  cleanup_test.rs  compact.rs  fast_hasher.rs  heap_store.rs  mod.rs  optimized.rs  probabilistic.rs  raw_api_store.rs  sharded.rs  store_test_suite.rs  tests.rs  timing_wheel.rs
src/transport/: compact_protocol.rs  grpc.rs  http.rs  http_test.rs  mod.rs  msgpack_optimized.rs  msgpack_protocol.rs
throttlecrab/: Cargo.toml  README.md
throttlecrab-client/: Cargo.toml  README.md  run-perf-tests.sh
throttlecrab-client/benches/: client_throughput.rs
throttlecrab-client/examples/: client_basic.rs
throttlecrab-client/src/: client.rs  client_v2.rs  error.rs  lib.rs  pool.rs  pool_v2.rs  protocol.rs
throttlecrab-client/tests/: integration_test.rs  perf_test.rs  protocol_comparison.rs
throttlecrab-server/: Cargo.toml  README.md  build.rs  run-benchmarks.sh  run-criterion-benchmarks.sh
throttlecrab-server/benches/: connection_pool.rs  grpc_throughput.rs  http_throughput.rs  msgpack_comparison.rs  protocol_comparison.rs  store_performance.rs  tcp_throughput.rs
throttlecrab-server/examples/: access_patterns.rs  access_patterns_simple.rs  benchmark_demo.rs  capacity_test.rs  grpc_client.rs  http_client.rs  performance_demo.rs  protocol_demo.rs  store_comparison.rs  test_optimized.rs
throttlecrab-server/proto/: throttlecrab.proto
throttlecrab-server/src/: actor.rs  actor_tests.rs  config.rs  lib.rs  main.rs  metrics.rs  store.rs  types.rs
throttlecrab-server/src/transport/: compact_protocol.rs  grpc.rs  http.rs  http_test.rs  mod.rs  msgpack.rs  msgpack_protocol.rs  native.rs  redis_security_test.rs  redis_test.rs
throttlecrab-server/src/transport/redis/: mod.rs  resp.rs
throttlecrab-server/tests/: README.md  benchmark.rs  denied_keys_test.rs  metrics_test.rs
throttlecrab-server/tests/integration/: benchmark_suite.rs  connection_pool.rs  high_performance_bench.rs  mod.rs  multi_transport.rs  store_comparison.rs  transport_tests.rs  workload.rs
throttlecrab/benches/: ahash_store.rs  cleanup_strategies.rs  core_performance.rs  store_shootout.rs
throttlecrab/examples/: basic.rs
throttlecrab/src/: lib.rs
throttlecrab/src/core/: mod.rs  rate_limiter.rs  tests.rs
throttlecrab/src/core/rate/: mod.rs  tests.rs
throttlecrab/src/core/store/: adaptive_cleanup.rs  cleanup_test.rs  fast_hasher.rs  mod.rs  periodic.rs  probabilistic.rs  store_test_suite.rs  tests.rs  tests_builders.rs
