[package]
name = "throttlecrab"
version = "0.1.0"
edition = "2024"
authors = ["Pavel Lazureykis <pavel@lazureykis.dev>"]
description = "A high-performance GCRA (Generic Cell Rate Algorithm) rate limiter"
readme = "README.md"
repository = "https://github.com/lazureykis/throttlecrab"
license = "MIT OR Apache-2.0"
keywords = ["rate-limiter", "gcra", "throttle", "rate-limiting", "async"]
categories = ["algorithms", "asynchronous", "network-programming"]

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"

# MessagePack
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
config = "0.14"
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
