[package]
name = "throttlecrab"
version = "0.1.0"
edition = "2024"
authors = ["Pavel Lazureykis <pavel@lazureykis.dev>"]
description = "A high-performance GCRA (Generic Cell Rate Algorithm) rate limiter"
readme = "README.md"
repository = "https://github.com/lazureykis/throttlecrab"
license = "MIT"
keywords = ["rate-limiter", "gcra", "throttle", "rate-limiting", "async"]
categories = ["algorithms", "asynchronous", "network-programming"]

# Library dependencies (minimal, no async/network)
[dependencies]

# Binary-only dependencies
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
anyhow = { version = "1", optional = true }
rmp-serde = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
bytes = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
config = { version = "0", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
# Enable all binary dependencies
bin = ["tokio", "async-trait", "anyhow", "rmp-serde", "serde", "bytes", "tracing", "tracing-subscriber", "clap", "config", "serde_json"]

[[bin]]
name = "throttlecrab"
required-features = ["bin"]

[dev-dependencies]
criterion = "0.7"
tokio-test = "0.4"
# For benchmarks
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "tcp_throughput"
harness = false

[[bench]]
name = "connection_pool"
harness = false

[[bench]]
name = "msgpack_comparison"
harness = false

[[bench]]
name = "protocol_comparison"
harness = false

[[bench]]
name = "core_performance"
harness = false
