[workspace]
members = [ "integration-tests","throttlecrab", "throttlecrab-server"]
resolver = "2"

[workspace.package]
authors = ["Pavel Lazureykis <pavel@lazureykis.dev>"]
repository = "https://github.com/lazureykis/throttlecrab"
license = "MIT"
edition = "2024"

[workspace.dependencies]
# Shared dependencies with unified versions
ahash = "0.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.42", features = ["derive", "env"] }
config = "0"
serde_json = "1"
tonic = "0.14.0"
tonic-prost = "0.14.0"
prost = "0.14.1"
axum = "0.8.4"
tower = "0.5"
criterion = "0.7"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
