[package]
name = "throttlecrab-integration-tests"
version = "0.4.3"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Utilities
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.9"
parking_lot = "0.12"

# For importing proto definitions
throttlecrab-server = { path = "../throttlecrab-server" }

# Redis client
redis = { version = "0.32.5", features = ["tokio-comp"] }



[dev-dependencies]
criterion = { workspace = true }
