[package]
name = "throttlecrab-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "High-performance client library for throttlecrab rate limiting server"
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords = ["rate-limiter", "client", "tokio", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["net", "io-util", "sync", "time", "rt", "macros"] }

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Serialization (for future MessagePack support)
bytes = { workspace = true }

# Logging
tracing = { workspace = true }

# For connection pooling
futures = "0.3"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
throttlecrab-server = { path = "../throttlecrab-server" }
throttlecrab = { path = "../throttlecrab" }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "client_throughput"
harness = false
