[package]
name = "throttlecrab-server"
version = "0.2.5"
authors.workspace = true
edition.workspace = true
description = "A high-performance rate limiting server with multiple protocol support"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["rate-limiter", "server", "grpc", "http", "native"]
categories = ["network-programming", "web-programming::http-server"]

[[bin]]
name = "throttlecrab-server"
path = "src/main.rs"

[dependencies]
# Core library
throttlecrab = { path = "../throttlecrab", version = "0.2.5", features = ["ahash"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling and utilities
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }
config = { workspace = true }

# gRPC support
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

# HTTP support
axum = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = "0.14.0"
tonic-prost-build = "0.14.0"

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true }
criterion = { workspace = true }
parking_lot = "0.12"
rand = "0.9"
bincode = "2"
bytes = { workspace = true }

[[bench]]
name = "tcp_throughput"
harness = false

[[bench]]
name = "connection_pool"
harness = false


[[bench]]
name = "protocol_comparison"
harness = false

[[bench]]
name = "grpc_throughput"
harness = false
