[package]
name = "throttlecrab-server"
version = "0.4.18"
authors.workspace = true
edition.workspace = true
description = "A high-performance rate limiting server with multiple protocol support"
readme = "README.md"
homepage = "https://github.com/lazureykis/throttlecrab"
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/throttlecrab-server"
keywords = ["rate-limiting", "redis", "rate-limit", "gcra", "throttle"]
categories = ["network-programming", "web-programming::http-server", "web-programming"]

[[bin]]
name = "throttlecrab-server"
path = "src/main.rs"

[dependencies]
# Core library
throttlecrab = { path = "../throttlecrab", version = "0.4.18", features = ["ahash"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling and utilities
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }
config = { workspace = true }

# gRPC support
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

# HTTP support
axum = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = "0.14.1"
tonic-prost-build = "0.14.1"

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true }
criterion = { workspace = true }
parking_lot = "0.12"
rand = "0.9"
bincode = "2"
bytes = { workspace = true }
fastrand = "2.0"

[[bench]]
name = "store_performance"
harness = false
