[package]
name = "throttlecrab"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
description = "A high-performance GCRA (Generic Cell Rate Algorithm) rate limiter library"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["rate-limiter", "gcra", "throttle", "rate-limiting", "algorithm"]
categories = ["algorithms", "data-structures", "no-std"]

[dependencies]
ahash = { workspace = true, optional = true }

[features]
default = ["ahash"]
# Enable fast hashing
ahash = ["dep:ahash"]

[dev-dependencies]
criterion = { workspace = true }
