[package]
name = "throttlecrab"
version = "0.4.17"
authors.workspace = true
edition.workspace = true
description = "A high-performance GCRA (Generic Cell Rate Algorithm) rate limiter library"
readme = "README.md"
homepage = "https://github.com/lazureykis/throttlecrab"
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/throttlecrab"
keywords = ["rate-limiting", "api-protection", "throttle", "gcra", "rate-limiter"]
categories = ["algorithms", "network-programming", "web-programming", "concurrency"]

[dependencies]
ahash = { workspace = true, optional = true }

[features]
default = ["ahash"]
# Enable fast hashing
ahash = ["dep:ahash"]

[dev-dependencies]
criterion = { workspace = true }
